--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+# Dependencies
 node_modules/
+
+# IDE settings
 .idea/
+
+# Environment variables
+.env
+backend/.env
+
+# Logs
+*.log
+
+# System files
+.DS_Store
